fixed display on iphone 8 and under

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
 .App {
-	height: 100vh;
-	margin-left: 60px;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
 	.App {
-		width: auto;
+		/* width: auto;
 		height: 100vh;
 		margin-left: 0px;
-		margin-bottom: 0px;
+		margin-bottom: 0px; */
 		position: relative;
 	}
 }
