--- a/src/assets/css/4-Skills/SkillsPage.css
+++ b/src/assets/css/4-Skills/SkillsPage.css
@@ -1,6 +1,6 @@
 .skillspage {
-	padding-left: 60px;
-	height: 100%;
+	padding-left: 120px;
+	height: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -34,7 +34,6 @@
 	.skillspage {
 		padding-left: 30px;
 		padding-top: 60px;
-		height: 100%;
 		width: auto;
 		display: flex;
 		flex-direction: column;
